drop ide apis dep